# CG_2021

./: README.md
CGFase1/CGFase1/Engine/: engine  engine.cpp  tinyxml2.h
CGFase1/CGFase1/Generator/: generator  generator.cpp  generator.h
CGFase1/CGFase1/files/: cone.3d  plane.3d  planeBox.xml
CGFase1/Engine/: engine  engine.cpp  engine.h  object3d.cpp  object3d.h
CGFase1/Generator/: generator  generator.cpp  generator.h
CGFase1/files/: box.3d  box.xml  cone.3d  cone.xml  cylinder.xml  plane.3d  plane.xml  planeBox.xml  planeSphere.xml  poop.xml  solarSystem.xml  sphere.3d  sphere.xml
CGFase2/CGFase2/Engine/: CMakeLists.txt  engine  engine.cpp  engine.h  geoTransforms.cpp
CGFase2/CGFase2/files/: box.xml
CGFase2/Engine/: CMakeLists.txt  Transformations.cpp  Transformations.h  engine  engine.cpp  engine.h  geoTransforms.cpp  geoTransforms.h
CGFase2/Generator/: generator  generator.cpp
CGFase2/files/: plane.xml  solarSystem.xml  sphere.3d  sphere.xml  torus.3d
Engine/: engine.cpp
Fase1/CGFase1/Engine/: CMakeLists.txt  engine.h
Fase1/CGFase1/Generator/: CMakeLists.txt  generator  generator.cpp
Fase1/CGFase1/files/: sphere.xml
Fase1/Engine/: engine
Fase2/Engine/: Transformations.cpp  engine  engine.cpp  geoTransforms.cpp  geoTransforms.h
Fase2/Generator/: generator.cpp
Fase2/TPFase2Grupo46/Engine/: CMakeLists.txt  Transformations.h
Fase2/files/: planeSphere.xml
Fase3/Engine/: CMakeLists.txt  engine  geoTransforms.cpp  geoTransforms.h  point.h  shape.h  tinyxml2.cpp
Fase3/Generator/: generator  generator.h
Fase3/files/: box.3d  cone.3d
Fase4/: make
Fase4/Engine/: CMakeLists.txt  Scene.cpp  Shape.cpp  Shape.h  Transformations.cpp  Transformations.h  engine.cpp  geoTransforms.h
Fase4/Generator/: generator  generator.h
Fase4/TPFase4Grupo46/: comandos
Fase4/files/: box.xml  cylinder.xml  plane.3d  teapot.3d  teapot.xml
Generator/: generator.cpp  generator.h
files/: box.xml  cone.3d  cone.xml  conqw.3d  plane.xml  sphere.3d  sphere.xml
(+36 files in other folders)
